Fix items alignment and responsiveness

--- a/style.css
+++ b/style.css
@@ -200,12 +200,17 @@ h2 {
 }
 
 .contributor-card {
-  width: 30%;
+  min-width: 30%;
   padding: 10px;
   margin-top: 15px;
+  justify-content: center;
 }
 
 .contributor-card>img {
   max-width: 100px;
   border-radius: 50%;
+}
+
+.contributor-card .card-title {
+  margin-block-end: 0;
 }
